--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nxzo</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="nxzo.ico" type="image/x-icon">
 </head>
 <body>
     <img src="nxzo.png" alt="Top Left Image" class="centered-image top-left">
     <img src="nxzo.png" alt="Top Right Image" class="centered-image top-right">
     <img src="nxzo.png" alt="Bottom Left Image" class="centered-image bottom-left">
     <img src="nxzo.png" alt="Bottom Right Image" class="centered-image bottom-right">
+
+    <div class="studio tooltip">Studio.
+        <span class="tooltiptext">This is the studio where creativity happens.</span>
+    </div>
+    <div class="partner tooltip">Partner.
+        <span class="tooltiptext">This is our partner organization.</span>
+    </div>
+    <div class="collective tooltip">Collective.
+        <span class="tooltiptext">This is the collective that collaborates with us.</span>
+    </div>
+
+    <script src="script.js"></script> <!-- Link to the external JavaScript file -->
 </body>
 </html>
