--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>nxzo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="nxzo.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <img src="nxzo.png" alt="Top Left Image" class="centered-image top-left">
@@ -13,14 +14,14 @@
     <img src="nxzo.png" alt="Bottom Left Image" class="centered-image bottom-left">
     <img src="nxzo.png" alt="Bottom Right Image" class="centered-image bottom-right">
 
-    <div class="studio tooltip">Studio.
-        <span class="tooltiptext">This is the studio where creativity happens.</span>
+    <div class="partner tooltip">partner.
+        <span class="tooltiptext">to help you build from 0 - 1.</span>
     </div>
-    <div class="partner tooltip">Partner.
-        <span class="tooltiptext">This is our partner organization.</span>
+    <div class="studio tooltip">studio.
+        <span class="tooltiptext">the growth studio you need.</span>
     </div>
-    <div class="collective tooltip">Collective.
-        <span class="tooltiptext">This is the collective that collaborates with us.</span>
+    <div class="collective tooltip">program.
+        <span class="tooltiptext">industry knowledge & mentorship.</span>
     </div>
 
     <script src="script.js"></script> <!-- Link to the external JavaScript file -->
