--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024">
     <title>nxzo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="nxzo.ico" type="image/x-icon">
@@ -18,12 +18,16 @@
         <span class="tooltiptext">to help you build from 0 - 1.</span>
     </div>
     <div class="studio tooltip">studio.
-        <span class="tooltiptext">the growth studio you need.</span>
+        <span class="tooltiptext">the growth studio for your thing.</span>
     </div>
     <div class="collective tooltip">program.
         <span class="tooltiptext">industry knowledge & mentorship.</span>
     </div>
 
     <script src="script.js"></script> <!-- Link to the external JavaScript file -->
+
+    <footer class="footer">
+        <a href="https://x.com/nxzostudio" class="footer-link">checkout the x acc.</a>
+    </footer>
 </body>
 </html>
