--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1024">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>nxzo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="nxzo.ico" type="image/x-icon">
@@ -27,7 +27,7 @@
     <script src="script.js"></script> <!-- Link to the external JavaScript file -->
 
     <footer class="footer">
-        <a href="https://x.com/nxzostudio" class="footer-link">checkout the x acc.</a>
+        <a href="https://x.com/nxzostudio" class="footer-link">the x acc.</a>
     </footer>
 </body>
 </html>
